# maskware

./: .gitignore  README.md  SPEC.md  background.js  bridge.js  build.ps1  esbuild.config.mjs  inject-av.js  inject-fonts.js  inject-geo.js  inject-hardware.js  inject-locale.js  inject-webrtc.js  manifest.base.json  manifest.chrome.json  manifest.firefox.json  manifest.json  package-lock.json  package.json  popup.html  popup.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
rules/: client-hints-strip.json  csp-font-src.json  webrtc-block.json
scripts/: generate-icons.mjs
src/: offscreen.html
src/background/: index.ts
src/init/: seed.ts
src/offscreen/: index.ts
src/popup/: App.tsx  index.html  style.css
src/popup/components/: Footer.tsx  Header.tsx  ProfileCard.tsx  ShieldList.tsx
src/shared/: browser-api.ts  channel.ts  constants.ts  crypto.ts  profile-db.ts  profiles.ts  types.ts
src/shields/av/: index.ts
src/shields/css-media/: index.ts
src/shields/fonts/: index.ts
src/shields/geo/: index.ts
src/shields/hardware/: index.ts
src/shields/locale/: index.ts
src/shields/permissions/: index.ts
src/shields/plugins/: index.ts
src/shields/webrtc/: index.ts
tests/e2e/: extension.spec.ts
tests/unit/: channel.test.ts  crypto.test.ts  profiles.test.ts  setup.ts  types.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
